--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
 											<p>Daniel holds a BS in MIS from Miami of Ohio and has been an independent software developer for more than a decade.  His products have reached hundreds of thousands of users, spanning everything from Line of Business, Data Visualization, to Entertainment and Games.<br><br> Dan's website can be found at: <a href="http://www.iCodeLight.com/">iCodeLight.com</a></p>
 										</article>
 
+										<article>
+											<a href="#" class="image"><img src="images/sarah.jpg" alt="" /></a>
+											<h3 class="major">Sarah Legault </h3>
+											<p>Sarah is an award winning filmmaker, director, producer, animator and writer. Her first stop-motion animation Dear Love earned the Best Animated Short Film award at the 2014 Toronto Independent Film Festival. Sarah recently teamed up with Canadian electro-goth band Johnny Hollow to direct and animate their stop-motion music video Firefly. Since 2005, she has won over 10 awards for her unique custom motorcycle paint work and participated in about 50 group exhibits in Toronto, Berlin, Krakow, or Los Angeles. Sarah’s work spans illustration, stop-motion animation, doll making, painting, photography and curating multimedia shows.</a></p>
+										</article>
+
+
 										<!---
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
