--- a/index.html
+++ b/index.html
@@ -115,8 +115,20 @@
 								</div>
 							</section>
 
+							<section id="four" class="wrapper alt spotlight style1">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Virtual Reality</h2>
+										<p>We design and develop Virual Realtiy, Augmented Reality and Mixed Reality games and experinaces. 
+										<br><br>
+										We can build your idea, or help you refine it. We can deliver games or applications for Google Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.</p>
+									</div>
+								</div>
+							</section>
+
 						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+							<section id="four" class="wrapper  style1">
 								<div class="inner">
 									<h2 class="major">The Team</h2>
 									<section class="features">
@@ -143,13 +155,6 @@
 											<p> Hossam is doing his post-doctorate at the Computer Science Department at the University of Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a href="http://www.hisack.com/">hisack.com</a><br><br>
 										</article>
 
-
-										<article>
-											<a href="#" class="image"><img src="images/dan.jpg" alt="" /></a>
-											<h3 class="major">Daniel James</h3>
-											<p>Daniel holds a BS in MIS from Miami of Ohio and has been an independent software developer for more than a decade.  His products have reached hundreds of thousands of users, spanning everything from Line of Business, Data Visualization, to Entertainment and Games.<br><br> Dan's website can be found at: <a href="http://www.iCodeLight.com/">iCodeLight.com</a></p>
-										</article>
-
 										<article>
 											<a href="#" class="image"><img src="images/sarah.jpg" alt="" /></a>
 											<h3 class="major">Sarah Legault </h3>
@@ -172,12 +177,22 @@
 							</section>
 
 
-							<section id="four" class="wrapper style2">
+							<section id="four" class="wrapper alt style2">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
 									<section class="features">
 										<article>
-											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/iOc8JQwl8Cc?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div><a class="youtube-embed-code" href="https://www.tubeembed.com" id="get-youtube-data">tubeembed</a><style>#youtube_canvas img{max-width:none!important;background:none!important}</style></div><br>
+											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/P7X9AR5KecE?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div></div><br>
+
+											<h3 class="major">Augmented Reality Buisness Card</h3>
+											<p>We spruced up our Packet39 Buisness cards with some Augmented Reality magic. Realtime digital 3D graphics overlay, attached to a physical object. If you want to try it yourself, download the app <a href="static/Packet39.apk">here</a> (Android only). You'll need a Packet39 <a href="images/BizCard.png">card</a>, print one if you don't have any.</p>
+
+
+										</article>
+
+
+										<article>
+											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/iOc8JQwl8Cc?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div></div><br>
 
 											<h3 class="major">Interactive displays</h3>
 											<p>Demo reel of several interactive displays developed by Packet39 team members. Detection is done using cameras and thermal sensors. Effects play in a powerful and customizable XNA framework. Most effects can be stacked and combined. An editor allowed our client to create unique experiences with their own graphics and media.</p>
@@ -185,7 +200,7 @@
 
 										</article>
 										<article>
-											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/0ND8xQoi4yg?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div><a class="youtube-embed-code" href="https://www.tubeembed.com" id="get-youtube-data">tubeembed</a><style>#youtube_canvas img{max-width:none!important;background:none!important}</style></div><br>
+											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/0ND8xQoi4yg?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div></div><br>
 
 											<h3 class="major">Custom built laser cutter / engraver</h3>
 											<p>This custom laser engraver can cut paper, vinyl, plastics, foam or thin wood sheets. It can engrave most non-metal materials. Sporting a 3.8W blue diode laser and a 32bit control board, it can handle any complex cutting job you throw at it. Built with a bottom-less design allowing working any surface or part, even parts that are bigger than the unit itself.</p>
@@ -242,7 +257,7 @@
 								</div>
 							</section> -->
 
-							<section id="five" class="wrapper alt style4">
+							<section id="five" class="wrapper style4">
 								<div class="inner">
 									<h2 class="major">Contact</h2>
 									<p>We will be happy to answer any questions you might have and we'll create a white paper and a proposal for your project, free of charge and without commitment. </p>
