--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@
 									<h2 class="major">Projects</h2>
 									<section class="features">
 										<article>
+											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/kyDiQ-KHNe0?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div></div><br>
+
+											<h3 class="major">Orbital Inection - Virtual Reality game</h3>
+											<p>Our VR game is now live on <a href="http://store.steampowered.com/app/587730/">Steam</a>. Grab planets and toss them into a stable orbit. This is a room-scale virtual reality experiance, running on the HTC Vive.</p>
+
+
+										</article>
+
+										<article>
 											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/P7X9AR5KecE?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div></div><br>
 
 											<h3 class="major">Augmented Reality Buisness Card</h3>
