--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-<title>Packet39, custom hardware and software solutions.</title>
+<title>Packet39 - Virtual Reality, Augmented Reality, Custom software and hardware solutions</title>
 
 <link rel="canonical" href="http://www.packet39.com/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content="Packet39 Custom hardware and software development solutions" >
-<meta name="description" content="Packet39 develops custom software and hardware solutions, computer vision and image processing applications for desktop, mobile or web.">
+<meta name="keywords" content="Virtual Reality, Augmented Reality, Packet39, Custom hardware,software, software development, developer, applications, computer vision, 3d printing, machine learning, openCV" >
+<meta name="description" content="Packet39 develops custom software and hardware solutions, Virtual Reality, Augmented Reality, computer vision and image processing applications for desktop, mobile or web.">
 
   <!--FACEBOOK-->
-  <meta property="og:title" content="Custom hardware and software solutions" >
+  <meta property="og:title" content="Packet39 - Virtual Reality, Augmented Reality, Custom software and hardware solutions" >
   <meta property="og:site_name" content="Packet39">
 <meta property="og:url" content="http://www.packet39.com/" >
-<meta property="og:description" content="Packet39 develops custom software and hardware solutions, computer vision and image processing applications for desktop, mobile or web." >
+<meta property="og:description" content="Packet39 develops custom software and hardware solutions, Virtual Reality, Augmented Reality, computer vision and image processing applications for desktop, mobile or web." >
 <meta property="og:image" content="" >
 
 <meta property="og:type" content="website" >
@@ -95,7 +91,7 @@
 										<h2 class="major">Software</h2>
 										<p>We develop software under Windows or Linux, using C# & .Net, Matlab, C++, Java or Python. We are familiar with OpenCV, EMGU, PCL, OpenNI and other CV and Image processing libraries.
 										<br><br>
-										We have experience in a wide range of fields, including action recognition in video, shape detection in stills, segmentation, medical imaging, 3D printing, 3D scanning and 3D reconstruction, gesture and finger detection using depth cameras, optical flow, face tracking and much more.
+										We have experience in a wide range of fields, including virtual reality, augmented reality, action recognition in video, shape detection in stills, segmentation, medical imaging, 3D printing, 3D scanning and 3D reconstruction, gesture and finger detection using depth cameras, optical flow, face tracking and much more.
 										<br><br>
 										With decades of combined expertise, we can develop and implement algorithms to solve real world problems. We will choose the right hardware, cameras or sensors for your needs and provide a start-to-finish service.</p>
 									</div>
@@ -127,57 +123,9 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four" class="wrapper  style1">
-								<div class="inner">
-									<h2 class="major">The Team</h2>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/vice.png" alt="" /></a>
-											<h3 class="major">Shachar "Vice" Weis</h3>
-											<p>Shachar is a software developer with over 20 years of experience. He has worked in many fields and disciplines, from ancient mainframes to tiny system-on-chip units. Shachar has extensive experience with small board computer and low-power systems, 3D platforms like OpenGL, DirectX, XNA and Three.JS. Shachar has dealt with first-tier customers like Disney, Sears, GE and Mazda.<br><br>
-
-											Shachar usually goes by Vice, and is also a tinkerer, maker, 3d printing enthusiast and photographer. Follow some of his projects on his blog <a href="http://CallMeVice.com">CallMeVice.com</a></p>
 
 
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/lena.png" alt="" /></a>
-											<h3 class="major">Lena Gorelick</h3>
-											<p> Dr. Gorelick is currently a research scientist with the Computer Science Department at the University of Western Ontario, London, Canada. Both her MSc (2004) and PhD (2009) are in Computer Science and Applied Mathematics from the Weizmann Institute of Science, Israel. During the past 16 years Lena has gained a lot of experience in various academic, military and industrial fields. Lena's publications can be found on her website, <a href="http://www.csd.uwo.ca/~ygorelic/">csd.uwo.ca/~ygorelic/</a><br><br>
-
-											Lena is also an artist and a jeweler, she has an <a href="https://lenagorelick.wordpress.com/">art blog</a> and an Etsy store called <a href="https://nunandnoot.etsy.com/">Nun&Noot</a>.</p>
-										</article>
-
-										<article>
-											<a href="#" class="image"><img src="images/hossam.png" alt="" /></a>
-											<h3 class="major">Hossam Issacs</h3>
-											<p> Hossam is doing his post-doctorate at the Computer Science Department at the University of Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a href="http://www.hisack.com/">hisack.com</a><br><br>
-										</article>
-
-										<article>
-											<a href="#" class="image"><img src="images/sarah.jpg" alt="" /></a>
-											<h3 class="major">Sarah Legault </h3>
-											<p>Sarah is an award winning filmmaker, director, producer, animator and writer. Her first stop-motion animation Dear Love earned the Best Animated Short Film award at the 2014 Toronto Independent Film Festival. Sarah recently teamed up with Canadian electro-goth band Johnny Hollow to direct and animate their stop-motion music video Firefly. Since 2005, she has won over 10 awards for her unique custom motorcycle paint work and participated in about 50 group exhibits in Toronto, Berlin, Krakow, or Los Angeles. Sarah’s work spans illustration, stop-motion animation, doll making, painting, photography and curating multimedia shows.</a></p>
-										</article>
-
-
-										<!---
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article> -->
-									</section>
-<!-- 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul> -->
-								</div>
-							</section>
-
-
-							<section id="four" class="wrapper alt style2">
+							<section id="four" class="wrapper style2">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
 									<section class="features">
@@ -239,6 +187,55 @@
 								</div>
 							</section>
 
+
+						<!-- Four -->
+							<section id="four" class="wrapper alt style1">
+								<div class="inner">
+									<h2 class="major">The Team</h2>
+									<section class="features">
+										<article>
+											<a href="#" class="image"><img src="images/vice.png" alt="" /></a>
+											<h3 class="major">Shachar "Vice" Weis</h3>
+											<p>Shachar is a software developer with over 20 years of experience. He has worked in many fields and disciplines, from ancient mainframes to tiny system-on-chip units. Shachar has extensive experience with small board computer and low-power systems, 3D platforms like OpenGL, DirectX, XNA and Three.JS. Shachar has dealt with first-tier customers like Disney, Sears, GE and Mazda.<br><br>
+
+											Shachar usually goes by Vice, and is also a tinkerer, maker, 3d printing enthusiast and photographer. Follow some of his projects on his blog <a href="http://CallMeVice.com">CallMeVice.com</a></p>
+
+
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/lena.png" alt="" /></a>
+											<h3 class="major">Lena Gorelick</h3>
+											<p> Dr. Gorelick is currently a research scientist with the Computer Science Department at the University of Western Ontario, London, Canada. Both her MSc (2004) and PhD (2009) are in Computer Science and Applied Mathematics from the Weizmann Institute of Science, Israel. During the past 16 years Lena has gained a lot of experience in various academic, military and industrial fields. Lena's publications can be found on her website, <a href="http://www.csd.uwo.ca/~ygorelic/">csd.uwo.ca/~ygorelic/</a><br><br>
+
+											Lena is also an artist and a jeweler, she has an <a href="https://lenagorelick.wordpress.com/">art blog</a> and an Etsy store called <a href="https://nunandnoot.etsy.com/">Nun&Noot</a>.</p>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="images/hossam.png" alt="" /></a>
+											<h3 class="major">Hossam Issacs</h3>
+											<p> Hossam is doing his post-doctorate at the Computer Science Department at the University of Western Ontario, London, Canada. Publications and CV can be found on Hossam's website: <a href="http://www.hisack.com/">hisack.com</a><br><br>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="images/sarah.jpg" alt="" /></a>
+											<h3 class="major">Sarah Legault </h3>
+											<p>Sarah is an award winning filmmaker, director, producer, animator and writer. Her first stop-motion animation Dear Love earned the Best Animated Short Film award at the 2014 Toronto Independent Film Festival. Sarah recently teamed up with Canadian electro-goth band Johnny Hollow to direct and animate their stop-motion music video Firefly. Since 2005, she has won over 10 awards for her unique custom motorcycle paint work and participated in about 50 group exhibits in Toronto, Berlin, Krakow, or Los Angeles. Sarah’s work spans illustration, stop-motion animation, doll making, painting, photography and curating multimedia shows.</a></p>
+										</article>
+
+
+										<!---
+										<article>
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<h3 class="major">Fusce consequat</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
+										</article> -->
+									</section>
+<!-- 									<ul class="actions">
+										<li><a href="#" class="button">Browse All</a></li>
+									</ul> -->
+								</div>
+							</section>
 
 
 <!-- 							<section id="five" class="wrapper alt style3">
