--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 											N5X2Z8 
 										</li>
 										<li class="fa-phone">519-902-6191</li>
-										<li class="fa-twitter"><a href="http://twitter.com/vice_ookpiklabs">twitter.com/vice_ookpiklabs</a></li>
+										<li class="fa-twitter"><a href="https://twitter.com/Vice_Packet39">@Vice_Packet39</a></li>
 										<li class="fa-wordpress"><a href="https://callmevice.com/">CallMeVice.com</a></li>
 									</ul>
 
