--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 										<li class="fa-envelope"><a href="mailto:Vice@Packet39.com">Vice@Packet39.com</a></li>
 										<li class="fa-home">
 											Packet39<br />
-											39 Raebrook place<br />
+											39 Raebrook Place<br />
 											London, ON, Canada<br />
 											N5X2Z8 
 										</li>
