--- a/ar.html
+++ b/ar.html
@@ -97,7 +97,7 @@ GearVR, HTC Vive, and Oculus Rift platforms.
 										<h2 class="major">Augmented Reality</h2>
 										<p>Bring to life static everyday objects, from buisness cards, to books, magazines, brochures and even three dimentional items such as toys or consumer products. Overlay, animate, gamify and extend your marketing materials.
 										<br><br>
-										Try it yourself, download our AR apps from the links below (Android only). Run the app and point your smartphone camera at one of our cards. If you don't have any, you can download and print our <b><a href="images/BizCard.png">buisness card</a></b> or the Alien Attack <b><a href="images/BizCard.png"> game card</a></b>.</p>
+										Try it yourself, download our AR apps from the links below (Android only). Run the app and point your smartphone camera at one of our cards. If you don't have any, you can download and print our <b><a href="images/BizCard.png">buisness card</a></b> or the Alien Attack <b><a href="images/AlienAttack.png"> game card</a></b>.</p>
 										</p>
 
 										<table border=0>
