--- a/ar.html
+++ b/ar.html
@@ -102,10 +102,10 @@ GearVR, HTC Vive, and Oculus Rift platforms.
 
 										<table border=0>
 <tr><td>
-<form method="post" action="static/Packet39.apk" >
+<form method="post" action="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0" >
 <input type="submit" value="Buisness Card AR" /> 
 </form></td><td>
-<form method="post" action="static/Packet39 Alien Attack.apk" >
+<form method="post" action="https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=0" >
 <input type="submit" value="Alien Attack" /> 
 </form>
 </td></tr>
