--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 											<div style="overflow:hidden;height:270px;width:480px;"><div id="youtube_canvas" style="height:270px;width:480px;"><iframe style="height:270px;width:480px;border:0;" frameborder="0" src="https://www.youtube.com/embed/P7X9AR5KecE?hl=en&amp;autoplay=0&amp;cc_load_policy=0&amp;loop=0&amp;iv_load_policy=1&amp;fs=1&amp;showinfo=1"></iframe></div></div><br>
 
 											<h3 class="major">Augmented Reality Buisness Card</h3>
-											<p>We spruced up our Packet39 Buisness cards with some Augmented Reality magic. Realtime digital 3D graphics overlay, attached to a physical object. If you want to try it yourself, download the app <a href="static/Packet39.apk">here</a> (Android only). You'll need a Packet39 <a href="images/BizCard.png">card</a>, print one if you don't have any.</p>
+											<p>We spruced up our Packet39 Buisness cards with some Augmented Reality magic. Realtime digital 3D graphics overlay, attached to a physical object. If you want to try it yourself, download the app <b><a href="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0">here</a></b> (Android only). You'll need a Packet39 <b><a href="images/BizCard.png">card</a></b>, print one if you don't have any.</p>
 
 
 										</article>
