--- a/ar.html
+++ b/ar.html
@@ -102,12 +102,11 @@ GearVR, HTC Vive, and Oculus Rift platforms.
 
 										<table border=0>
 <tr><td>
-<form method="post" action="https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=0" >
-<input type="submit" value="Buisness Card AR" /> 
-</form></td><td>
-<form method="post" action="https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=0" >
-<input type="submit" value="Alien Attack" /> 
-</form>
+<input type="submit" value="Buisness Card AR" onclick="window.location.href='https://www.dropbox.com/s/wdp1tnpkqi83ov1/Packet39.apk?dl=1'"/> 
+</td><td>
+
+<input type="submit" value="Alien Attack" onclick="window.location.href='https://www.dropbox.com/s/flq8g7g8dkcjoqp/Packet39%20Alien%20Attack.apk?dl=1'"/> 
+
 </td></tr>
 
 
