--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Virtual Reality</h2>
-										<p>We design and develop Virual Realtiy, Augmented Reality and Mixed Reality games and experiences. 
+										<p>We design and develop Virual Reality, Augmented Reality and Mixed Reality games and experiences. 
 										<br><br>
 										We can build your idea, or help you refine it. We can deliver games or applications for Google Cardboard, Daydream, Samsung GearVR, HTC Vive or the Oculus Rift.</p>
 									</div>
