--- a/legacy/generic.html
+++ b/legacy/generic.html
@@ -9,10 +9,13 @@
 		<title>Generic - Solid State by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 8]>
+        <script src="../src/assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="../src/assets/css/main.css" />
+		<!--[if lte IE 9]>
+        <link rel="stylesheet" href="../src/assets/css/ie9.css"/><![endif]-->
+		<!--[if lte IE 8]>
+        <link rel="stylesheet" href="../src/assets/css/ie8.css"/><![endif]-->
 	</head>
 	<body>
 
@@ -21,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="../src/index.html">Solid State</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -32,7 +35,7 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
+								<li><a href="../src/index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
 								<li><a href="#">Log In</a></li>
@@ -126,12 +129,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="../src/assets/js/skel.min.js"></script>
+			<script src="../src/assets/js/jquery.min.js"></script>
+			<script src="../src/assets/js/jquery.scrollex.min.js"></script>
+			<script src="../src/assets/js/util.js"></script>
+			<!--[if lte IE 8]>
+        <script src="../src/assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="../src/assets/js/main.js"></script>
 
 	</body>
 </html>
